# cos518-2024-project

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.txt  diff_lines.sh  experiments.txt  test.sh  test3.sh  test3_aws.sh  test5.sh  test5_aws.sh
.ipynb_checkpoints/: plot-checkpoint.py  plots-checkpoint.ipynb  plots_global-checkpoint.ipynb
plots/: plots_domestic.ipynb  plots_global.ipynb
results_3_replicas_virginia_tokyo_london/results_0.00conflict/: exp3_london_sleep{20}_time{30}.txt  exp3_london_sleep{25}_time{30}.txt  exp3_london_sleep{50}_time{30}.txt  exp3_tokyo_sleep{20}_time{30}.txt  exp3_tokyo_sleep{50}_time{30}.txt  exp3_virginia_sleep{20}_time{30}.txt  exp3_virginia_sleep{25}_time{30}.txt  exp3_virginia_sleep{50}_time{30}.txt
results_3_replicas_virginia_tokyo_london/results_0.02conflict/: exp3_london_sleep{100}_time{30}.txt  exp3_london_sleep{15}_time{30}.txt  exp3_london_sleep{20}_time{30}.txt  exp3_london_sleep{25}_time{30}.txt  exp3_london_sleep{50}_time{30}.txt  exp3_tokyo_sleep{100}_time{30}.txt  exp3_tokyo_sleep{15}_time{30}.txt  exp3_tokyo_sleep{20}_time{30}.txt  exp3_tokyo_sleep{50}_time{30}.txt  exp3_virginia_sleep{15}_time{30}.txt  exp3_virginia_sleep{200}_time{30}.txt  exp3_virginia_sleep{25}_time{30}.txt
results_3_replicas_virginia_tokyo_london/results_1.00conflict/: exp3_london_sleep{200}_time{30}.txt  exp3_london_sleep{50}_time{30}.txt  exp3_london_sleep{75}_time{30}.txt  exp3_tokyo_sleep{50}_time{30}.txt  exp3_tokyo_sleep{75}_time{30}.txt  exp3_virginia_sleep{100}_time{30}.txt  (+1 more)
src/: main.rs
test_scripts/: test3_aws.sh  test5_aws.sh
(+163 files in other folders)
