[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.1"
async-dup = "1.2.4"
clap = { version = "4.5.4", features = ["derive"] }
petgraph = "0.6.4"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_json_any_key = "2.0.0"
serde_with = "3.8.1"
smol = "2.0.0"
tiny_http = "0.12.0"

[profile.dev]
opt-level = 3